Added /profile endpoint and changed swagger file
